version/0.31/_sources/api/solver/_autosummary/settings/mesh_2_child.rst.txt
:orphan:

.. _mesh_2_child:

mesh_child
==========

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.mesh_2_child
    :show-inheritance:

.. rubric:: Attributes

==============================================   ===============================================================

Attribute                                                                                                Summary

==============================================   ===============================================================
:ref:`name <name_17>`                                                                      A name for an object.

:ref:`surfaces_list <surfaces_list>`                 The planar surface(s) where you want the results displayed.

:ref:`options <options_13>`                                                        The rendering options object.

:ref:`edge_type <edge_type>`                                            Enables the display of the mesh outline.

:ref:`shrink_factor <shrink_factor>`                                       The amount to shrink faces and cells.

:ref:`coloring <coloring>`                                                          The coloring options object.

:ref:`display_state_name <display_state_name>`                         Display state settings selection by name.

:ref:`physics <physics_1>`                                                                      'physics' child.

:ref:`geometry <geometry_7>`                                                                   'geometry' child.

:ref:`surfaces <surfaces_4>`                                                                   'surfaces' child.

:ref:`annotations_list <annotations_list>`           The annotation objects to be added to this graphics object.

==============================================   ===============================================================

.. rubric:: Methods

==========================   ======================

Method                                      Summary

==========================   ======================
:ref:`display <display_3>`       'display' command.

==========================   ======================

.. rubric:: Included in:

======================   =================

Parent                             Summary

======================   =================
:ref:`mesh_2 <mesh_2>`       'mesh' child.

======================   =================

