version/0.42/_sources/api/solver/_autosummary/settings/mesh_2_child.rst.txt
:orphan:

.. _mesh_2_child:

mesh_child
==========

.. autoclass:: ansys.fluent.core.generated.solver.settings_261.mesh_2_child
    :show-inheritance:

.. rubric:: Attributes

==============================================   ===============================================================

Attribute                                                                                                Summary

==============================================   ===============================================================
:ref:`name <name_37>`                                                                      A name for an object.

:ref:`surfaces_list <surfaces_list>`                 The planar surface(s) where you want the results displayed.

:ref:`locations <locations_5>`                                                                'locations' child.

:ref:`options <options_15>`                                                        The rendering options object.

:ref:`edge_type <edge_type>`                                            Enables the display of the mesh outline.

:ref:`edge_type_options <edge_type_options>`                                      Controls the display of edges.

:ref:`shrink_factor <shrink_factor>`                                       The amount to shrink faces and cells.

:ref:`coloring <coloring>`                                                          The coloring options object.

:ref:`coloring_options <coloring_options>`                                          The coloring options object.

:ref:`display_state_name <display_state_name>`                         Display state settings selection by name.

:ref:`annotations_list <annotations_list>`           The annotation objects to be added to this graphics object.

==============================================   ===============================================================

.. rubric:: Methods

==========================   ======================================================================

Method                                                                                      Summary

==========================   ======================================================================
:ref:`display <display_9>`       Displays the selected graphics object type in the graphics viewer.

==========================   ======================================================================

.. rubric:: Included in:

======================   ===================================================================================================================================================================================================================================================================

Parent                                                                                                                                                                                                                                                                               Summary

======================   ===================================================================================================================================================================================================================================================================
:ref:`mesh_2 <mesh_2>`       A mesh object is a named graphical entity in used to represent surface or volume meshes for visualization purposes. These objects allow users to control how mesh data is displayed, manipulated, or referenced in post-processing and visualization workflows.

======================   ===================================================================================================================================================================================================================================================================

